--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: thoughts && feelings
+title: Code and stuff
 subtitle:
 description:
 author: Hung Le
